@@ -26,7 +26,10 @@ $trk &&= Term::ReadKey->can('GetTerminalSize');
 if (!-t *STDOUT) {
     *USE_TERM_READKEY  = sub() { 0 };
     *USE_TERM_SIZE_ANY = sub() { 0 };
-    *term_size         = \&DEFAULT_SIZE;
+    *term_size         = sub {
+        return $ENV{TABLE_TERM_SIZE} if $ENV{TABLE_TERM_SIZE};
+        return DEFAULT_SIZE;
+    };
 }
 elsif ($tsa) {
     *USE_TERM_READKEY  = sub() { 0 };
