@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Honor the env variable even on non-term output
+
 0.010     2017-10-03 09:41:46-07:00 America/Los_Angeles
 
     - No changes since trial
